--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprint5</title>
+    <link rel="stylesheet" href="/src/estilo.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
+
 <body>
-    <main class="container-fluid" id="container">
-        <h1 class="titulo">Preparate para reir....</h1>
-        <button class ="btn-success" id = "botonSiguiente" onclick="cargarChiste()">Mostrar chiste </button>
-        <p id="chiste" >Aqui está el párrafo</p>
+    <main class="container flex justify-center aling-items-center" id="container">
+        <div class="tiempo">
+            <p class="text-white">Hoy: parcialmente nublado</p>
+        </div>
+        <div class="containerChiste   p-3 text-center">
+            <h1 class="titulo text-center">Preparate para reir.... 🤣</h1>
+            <p id="chiste ">Aqui está el chiste...</p>
+            <button class="btn btn-outline-primary mb-2  " id="botonSiguiente" onclick="cargarChiste()">Mostrar chiste </button>
+        </div>
 
 
     </main>
-   <script src="/src/codigo.js"></script> 
+    <script src="/src/codigo.js"></script>
 </body>
+
 </html>
