--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         </div>
         <div class="containerChiste   p-3 text-center">
             <h1 class="titulo text-center">Preparate para reir.... 🤣</h1>
-            <p id="chiste ">Aqui está el chiste...</p>
+            <p id="chiste">Aqui está el chiste...</p>
+            <div class="containerBotones p-2">
+                <button class="puntuacion rounded-2" id="puntuacion1" onclick="valorar(1)">😖</button>
+                <button class="puntuacion rounded-2" id="puntuacion2" onclick="valorar(2)">😐</button>
+                <button class="puntuacion rounded-2" id="puntuacion3" onclick="valorar(3)">🤣 </button>
+            </div> 
             <button class="btn btn-outline-primary mb-2  " id="botonSiguiente" onclick="cargarChiste()">Mostrar chiste </button>
         </div>
 
