--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <main class="container flex justify-center aling-items-center" id="container">
-        <div class="tiempo">
-            <p class="text-white">Hoy: parcialmente nublado</p>
+        <div class="claseTiempo">
+            <p class="text-white" id="tiempo">Hoy: parcialmente nublado</p>
         </div>
         <div class="containerChiste   p-3 text-center">
             <h1 class="titulo text-center">Preparate para reir.... 🤣</h1>
