--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="puntuacion rounded-2" id="puntuacion2" onclick="valorar(2)">😐</button>
                 <button class="puntuacion rounded-2" id="puntuacion3" onclick="valorar(3)">🤣 </button>
             </div> 
-            <button class="btn btn-outline-primary mb-2  " id="botonSiguiente" onclick="cargarChiste()">Mostrar chiste </button>
+            <button class="btn btn-outline-primary mb-2  " id="botonSiguiente" onclick="cargarChistesAlternos()">Mostrar chiste </button>
         </div>
 
 
