--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">-->
 </head>
 <body>
-    <main class="container prueba  flex justify-center aling-items-center" id="container">
+    <main class="container" id="container">
         <div class="claseTiempo row">
             <img class="col" id="iconoTiempo" src="" alt="icono tiempo">
             <p class="col" id="tiempo"></p>
